// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Tokenizer simple case 1`] = `
Object {
  "buffer": "/**[n] * line 1 [n] * line 2[n] */",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": ">       <  ",
      "tokenKind": "PlainText",
    },
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": "      ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": ">         <",
      "tokenKind": "PlainText",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "      ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "      ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 1`] = `
Object {
  "buffer": "/***/",
  "tokens": Array [
    Object {
      "indexOfLine": -1,
      "line": "><",
      "span": "",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 2`] = `
Object {
  "buffer": "/**[n] *[n] */",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 3`] = `
Object {
  "buffer": "/**[n] [n] [n] */",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": "><",
      "span": "><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;
